@@ -39,6 +39,7 @@ def load_tests(basic_tests, module, loader):
         candidates = []
     scripts = [candidate for candidate in candidates
                if candidate.endswith('.txt')]
+    # since this module doesn't define tests, we ignore basic_tests
     suite = doctest.DocFileSuite(*scripts)
     # DocFileCase reduces the test id to the base name of the tested file, we
     # want the module to appears there.
