@@ -39,7 +39,6 @@ from bzrlib.errors import (ConnectionError,
                            FileExists,
                            InvalidURL,
                            LockError,
-                           NoSmartServer,
                            NoSuchFile,
                            NotLocalUrl,
                            PathError,
