@@ -55,6 +55,11 @@ IN DEVELOPMENT
 
   TESTING:
 
+    * The test suite modules have been modified to define load_tests() instead
+      of test_suite(). That speeds up selective loading (via --load-list)
+      significantly and provides many examples on how to migrate (grep for
+      load_tests).  (Vincent Ladeuil)
+
   INTERNALS:
 
     * Implement xml8 serializer.  (Aaron Bentley)
@@ -327,8 +332,8 @@ bzr 1.4rc1 2008-04-11
     * selftest --load-list now uses a new more agressive test loader that will
       avoid loading unneeded modules and building their tests. Plugins can use
       this new loader by defining a load_tests function instead of a test_suite
-      function. All tests modules have been updated and provides many examples
-      (grep for load_tests).
+      function. (a forthcoming patch will provide many examples on how to
+      implement this).
       (Vincent Ladeuil)
 
     * selftest --load-list now does some sanity checks regarding duplicate test
